--- a/main.scss
+++ b/main.scss
@@ -40,6 +40,8 @@ h1 {
     font-weight: bold;
     font-size: 63px;
     margin: 0;
+
+    
 }
 
 p {
@@ -53,9 +55,18 @@ header {
 
     width: 976px; //for header
 
+    @include media(md) {
+        max-width: 720px;
+    }
+
+    @include media(sm) {
+        // width: 569px;
+    }
+
     section {
         display: flex;
         gap: 40px;
+        
 
         nav {
             display: flex;
@@ -79,11 +90,15 @@ header {
             list-style: none;
             text-decoration: none;
         }
+
+        @include media(sm){
+            justify-content: center
+        }
     }
 
 }
 
-main {
+main { 
     
     @include container;
     flex: 1;
@@ -98,6 +113,14 @@ main {
         h1 {
             @include gradient-text;
             font-size: 82px;
+
+            @include media(sm) {
+                font-size: 42px;
+            }
+
+        }
+
+        @include media(sm){
 
         }
     }
@@ -176,7 +199,13 @@ main {
 
                     @include media(lg) {
                         flex-direction: column;
+
                         
+                    }
+
+                    @include media(md) {
+                        // @include container;
+                        max-width: 720px;
                     }
                 }
             }
@@ -187,22 +216,25 @@ main {
             color: rgb(210, 214, 220);
         }
 
-        
+        @include media(lg);
+
+
 
     }
-
-    
 }
 
 footer {
     background-color: #252F3F;
     .container {
+
+        @include container;
         display: flex;
         max-width: 975px;
         margin: 0 auto;
         justify-content: space-between;
         padding: 1rem 0;
         align-items: center;
+
         ul {
             display: flex;
             padding: 0;
@@ -225,7 +257,23 @@ footer {
             width: 30px;
             height: 30px;
         }
+
+        @include media(sm) {
+            flex-direction: column;
+            row-gap: 1rem;
+        }
+
+        @include media(md) {
+            // align-items: center;
+            text-align: center;
+            max-width: 720px;
+
+        }
     }
+
+
+    
+    
 }
 
 // SINGLE POST PAGE
@@ -245,99 +293,158 @@ footer {
             font-size: 58px;
             text-align: center;
             margin: 0;
+
+            @include media(md) {
+                max-width: 720px;
+                font-size: 46px;
+            }
+
+            @include media(sm) {
+                font-size: 32px;
+            }
         }
 
         dl {
             color: $gray;
             font-size: 18px;
         }
+
+        @include media(md) {
+            padding-bottom: 0;
+        }
     }
 
     &__content {
-        display: flex;
-        gap: 24px;
-        padding-bottom: 5rem;
+        @include container;
 
+        grid-template-rows: auto 1fr;
+        display: grid;
+        grid-template-columns: repeat(4, minmax(0,1fr));
 
-        &__column {
-            min-width: 25%;
+        &__detail {
+            padding: 0rem 1rem 0rem 0rem;
+            display: flex;
+            gap: 8px;
+            align-items: center;
 
-            .footer {
+            &__img-container {
+                width: 40px;
+                height: 40px;
+                border-radius: 50%;
+                overflow: hidden;
 
-                &__other-posts{
-
-                    display: flex;
-                    flex-direction: column;
-                    gap: 30px;
-
-                    padding: 1.5rem 0;
-
-                    p {
-                        font-size: 14px;
-                        color: $gray;
-                    }
-
-                    a {
-                        font-size: 16px;
-                        color: $linkpurple;
-                    }
-                }
-
-                &__backlink {
-                    padding-top: 1.5rem;
-                    color: $linkpurple;
-
+                img {
+                width: 100%;
+                object-fit: contain;
                 }
             }
 
-            .description {
-                padding: 2.5rem 0;
-                .detail {
-                    display: flex;
-                    gap: 8px;
-                    align-items: center;
-
-                    .img-container {
-                        width: 40px;
-                        height: 40px;
-                        border-radius: 50%;
-                        overflow: hidden;
-
-                        img {
-                        width: 100%;
-                        object-fit: contain;
-                        }
-                    }
-                    .author{
-                        font-size: 16px;
-                    }
-                    .title {
-                        font-size: 16px;
-                        color: $gray;
-                        padding: 0;
-                    }
-                    
-                }
+            &__author{
+                font-size: 16px;
             }
 
+            &__title {
+                font-size: 16px;
+                color: $gray;
+                padding: 0;
+            }
+
+            
+                
         }
 
         &__post-content{
-            display: flex;
-            flex-direction: column;
-            gap: 32px;
-
+            grid-row: span 2/span 2;
+            grid-column: span 3/span 3;
+            padding-bottom: 4rem;
+            // padding: 0rem 1rem 4rem 0rem;
 
             &__img-container {
-                max-width: 720px;
-
+                // max-width: 720px;
+                max-width: 100%;
+                // display: flex;
+                // justify-content: center;
+                // margin: 0;
+                // padding-bottom: 2rem;
 
                 img {
                     width: 100%;
+                    object-fit: contain;
 
                 }
             }
-        }
-    }
 
+            hr {
+                // color: green;
+                // padding: 2rem 0rem;
+                margin: 2rem 0rem;
+            }
+
+        }
+            
+        
+
+        &__footer {
+            padding: 0rem 1rem 4rem 0rem;
+
+            grid-column-start: 1;
+            grid-row-start: 2;
+
+            &__other-posts{
+
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+
+                padding: 1.5rem 0;
+
+                p {
+                    font-size: 14px;
+                    color: $gray;
+                }
+
+                a {
+                    font-size: 16px;
+                    color: $linkpurple;
+                }
+            }
+
+            &__backlink {
+                padding-top: 1.5rem;
+                color: $linkpurple;
+
+            }
+            
+        }
+
+        @include media(md){
+            display: block;
+            max-width: 720px;
+
+            &__detail {
+                justify-content: center;
+                display: flex;
+                margin: 0;
+                padding: 2rem 0;
+
+            }
+
+            &__post-content {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                padding-bottom: 0;
+
+                hr {
+                //     display: block;
+                //     color: red;
+                width: 100%;
+                }
+                
+            }
+            
+        }
+        
+    }
 }
